--- a/public/css/detail.css
+++ b/public/css/detail.css
@@ -98,7 +98,7 @@
     padding: 20px;
     cursor: pointer;
 }
-.error-date {
+.error {
     padding: 5px 20px;
     color: #fff;
     font-size: 16px;
