--- a/public/css/detail.css
+++ b/public/css/detail.css
@@ -12,7 +12,12 @@
 .detail-ttl {
     display: flex;
     align-items: center;
+    justify-content: space-between;
     margin-bottom: 20px;
+}
+.detail-ttl__ttl-box {
+    display: flex;
+    align-items: center;
 }
 .detail-ttl__back {
     padding: 5px 8px;
@@ -25,6 +30,33 @@
 }
 .detail-ttl__ttl {
     font-size: 32px;
+}
+.average-score {
+    display: flex;
+    justify-content: center;
+    align-items: end;
+}
+.average-score-display {
+    margin-right: 5px;
+    font-size: 16px;
+}
+.star-rating {
+    position: relative;
+    width: 5em;
+    height: 1em;
+    font-size: 17px;
+}
+.star-rating-front {
+    position: absolute;
+    top: 0;
+    left: 0;
+    overflow: hidden;
+    white-space: nowrap;
+    color: #ffcc33;
+    height: 25px;
+}
+.star-rating-back {
+    color: #ccc;
 }
 .detail-img {
     width: 100%;
@@ -40,6 +72,46 @@
 }
 .detail-overview {
     line-height: 1.4em;
+    margin-bottom: 30px;
+}
+.review-ttl {
+    font-size: 24px;
+    margin-bottom: 30px;
+}
+.review-content {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border: 1px solid darkgray;
+    border-radius: 5px;
+    padding: 20px;
+    margin-bottom: 10px;
+}
+.review-no-content {
+    margin-bottom: 20px;
+}
+.score {
+    display: flex;
+    align-items: center;
+}
+.score-img-people {
+    width: 25px;
+    height: 25px;
+    margin-right: 10px;
+}
+.review-form {
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+}
+.review-form__img {
+    width: 15px;
+    height: 15px;
+}
+.review-form__button {
+    display: inline-block;
+    border: none;
+    cursor: pointer;
 }
 .reserve {
     position: relative;
