--- a/public/css/mypage.css
+++ b/public/css/mypage.css
@@ -8,10 +8,12 @@
 }
 .main {
     display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    padding: 50px 5%;
 }
 .reserves-box {
-    width: 30%;
-    padding: 50px 10%;
+    width: 48%;
 }
 .reserves-ttl {
     font-size: 24px;
@@ -25,6 +27,7 @@
     padding: 20px;
     border-radius: 5px;
     box-shadow: 2px 2px 3px 0 rgba(0, 0, 0, 0.5);
+    width: 60%
 }
 .reserve-ttl {
     display: flex;
@@ -79,8 +82,7 @@
     cursor: pointer;
 }
 .likes-box {
-    width: 50%;
-    padding: 50px 10%;
+    width: 48%;
 }
 .likes-ttl {
     font-size: 24px;
@@ -180,4 +182,7 @@
     top: 0;
     left: 0;
     z-index: 2;
+}
+.reserve-history{
+    width: 100%;
 }
