--- a/public/css/mypage.css
+++ b/public/css/mypage.css
@@ -96,12 +96,16 @@
 }
 .card {
     width: 45%;
-    border-radius: 3px;
+    border-radius: 5px;
+    border: none;
     box-shadow: 2px 2px 3px 0 rgba(0, 0, 0, 0.5);
     margin-bottom: 30px;
+    background-color: #fff;
 }
 .card__text-box {
     padding: 15px;
+    border-radius: 5px;
+    background-color: #fff;
 }
 .card__content-img {
     text-align: center;
@@ -109,7 +113,7 @@
 .card__img {
     width: 100%;
     object-fit: cover;
-    border-radius: 3px 3px 0 0;
+    border-radius: 5px 5px 0 0;
 }
 .card__ttl-box {
     display: flex;
