--- a/public/css/reserve_history.css
+++ b/public/css/reserve_history.css
@@ -1,3 +1,61 @@
 .header {
     padding: 30px 5% 10px;
 }
+.reserves-box {
+    width: 70%;
+    margin: 0 auto;
+    padding: 50px 0;
+}
+.reserves-ttl {
+    text-align: center;
+    font-size: 24px;
+    font-weight: bold;
+    margin-bottom: 50px;
+}
+.reserve {
+    position: relative;
+    background-color: #305dff;
+    margin: 0 auto 30px;
+    padding: 20px;
+    border-radius: 5px;
+    box-shadow: 2px 2px 3px 0 rgba(0, 0, 0, 0.5);
+    width: 60%;
+}
+.reserve-ttl {
+    display: flex;
+    align-items: center;
+}
+.reserve-ttl__img {
+    width: 20px;
+    height: 20px;
+    margin-right: 20px;
+}
+.reserve-ttl__ttl {
+    color: #fff;
+}
+.table {
+    margin-top: 20px;
+    color: #fff;
+}
+.th,
+.td {
+    padding: 10px;
+    text-align: left;
+    font-size: 16px;
+}
+.reserve-links{
+    text-align: right;
+}
+.reserve-link:first-child {
+    margin: 10px 0;
+}
+.reserve-again-link,
+.review-link {
+    display: inline-block;
+    padding: 5px 20px;
+    border: 1px solid #fff;
+    border-radius: 5px;
+    text-decoration: none;
+    color: #fff;
+    font-size: 16px;
+}
