--- a/public/css/review.css
+++ b/public/css/review.css
@@ -84,6 +84,7 @@
 .review-all {
     width: 100%;
     margin: 0 auto;
+    padding-bottom: 100px;
 }
 .review-all__ttl {
     font-size: 24px;
@@ -93,14 +94,36 @@
 }
 .review-content {
     display: flex;
+    position: relative;
     justify-content: space-between;
     align-items: center;
     background-color: #fff;
     border-radius: 5px;
     width: 50%;
-    padding: 20px;
+    padding: 20px 50px;
     margin: 0 auto 15px;
     box-shadow: 2px 2px 3px 0 rgba(0, 0, 0, 0.5);
+}
+.review-delete {
+    position: absolute;
+    top: 50%;
+    right: 10px;
+    transform: translate(0, -50%);
+}
+.review-delete__img {
+    width: 20px;
+    height: 20px;
+    filter: brightness(0);
+}
+.review-delete__input {
+    opacity: 0;
+    position: absolute;
+    cursor: pointer;
+    width: 25px;
+    height: 25px;
+    top: 0;
+    left: 0;
+    z-index: 2;
 }
 .score {
     display: flex;
