--- a/public/css/done.css
+++ b/public/css/done.css
@@ -27,3 +27,15 @@
     border: none;
     cursor: pointer;
 }
+@media screen and (max-width: 768px) {
+    .form {
+        width: 49%;
+    }
+}
+
+@media screen and (max-width: 480px) {
+    .form {
+        width: 70%;
+        padding: 100px 30px;
+    }
+}
