--- a/public/css/login.css
+++ b/public/css/login.css
@@ -53,6 +53,17 @@
     border: none;
     cursor: pointer;
 }
-.error{
+.error {
     padding: 10px 30px;
+}
+@media screen and (max-width: 768px) {
+    .form {
+        width: 49%;
+    }
+}
+
+@media screen and (max-width: 480px) {
+    .form {
+        width: 90%;
+    }
 }
