--- a/public/css/detail.css
+++ b/public/css/detail.css
@@ -82,7 +82,8 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    border: 1px solid darkgray;
+    background-color: #fff;
+    box-shadow: 2px 2px 3px 0 rgba(0, 0, 0, 0.5);
     border-radius: 5px;
     padding: 20px;
     margin-bottom: 10px;
@@ -175,4 +176,18 @@
     padding: 5px 20px;
     color: #fff;
     font-size: 16px;
+}
+@media screen and (max-width: 768px) {
+    .content {
+        display: block;
+    }
+    .detail{
+        width: 80%;
+        margin: 30px auto;
+    }
+    .reserve{
+        width: 80%;
+        margin: 30px auto;
+        height: 50vh;
+    }
 }
