--- a/public/css/review.css
+++ b/public/css/review.css
@@ -54,11 +54,13 @@
     margin-bottom: 20px;
 }
 .review-comment__label {
+    display: inline-block;
     margin: 20px 20px 0 0;
     font-size: 16px;
     font-weight: bold;
 }
 .comment {
+    display: inline-block;
     width: 80%;
     border: 1px solid darkgray;
     border-radius: 5px;
@@ -103,6 +105,10 @@
     padding: 20px 50px;
     margin: 0 auto 15px;
     box-shadow: 2px 2px 3px 0 rgba(0, 0, 0, 0.5);
+}
+.review-comment{
+    width: 70%;
+    overflow-wrap: break-word;
 }
 .review-delete {
     position: absolute;
@@ -155,4 +161,34 @@
 }
 .error {
     padding: 5px 20px;
+}
+@media screen and (max-width: 768px) {
+    .review-form {
+        width: 60%;
+        margin-top: 20px;
+    }
+    .review-comment-box {
+        display: block;
+    }
+    .review-comment__label {
+        margin-bottom: 20px;
+    }
+    .comment{
+        width: 100%;
+    }
+    .review-content{
+        display: block;
+    }
+    .score{
+        margin-bottom: 10px;
+    }
+    .review-comment{
+        width: 100%;
+    }
+}
+
+@media screen and (max-width: 480px) {
+    .review-form {
+        width: 80%;
+    }
 }
