--- a/public/css/reserve_edit.css
+++ b/public/css/reserve_edit.css
@@ -66,3 +66,17 @@
     color: #fff;
     font-size: 16px;
 }
+@media screen and (max-width: 768px) {
+    .reserve {
+        width: 70%;
+    }
+    .reserve-ttl{
+        text-align: center;
+    }
+}
+
+@media screen and (max-width: 480px) {
+    .reserve {
+        width: 90%;
+    }
+}
