--- a/public/css/index.css
+++ b/public/css/index.css
@@ -33,7 +33,7 @@
 .search__area {
     border-radius: 5px 0 0 5px;
 }
-.search__shopname {
+.search__shop-name {
     position: relative;
 }
 .input {
@@ -182,7 +182,7 @@
     outline: none;
     font-size: 16px;
 }
-.m-search__shopname {
+.m-search__shop-name {
     position: relative;
 }
 .m-search-img {
@@ -217,7 +217,7 @@
         margin: 30px 50px 0;
         box-shadow: 2px 2px 3px 0 rgba(0, 0, 0, 0.5);
     }
-    .search__shopname {
+    .search__shop-name {
         width: 100%;
     }
 }
