--- a/public/css/detail.css
+++ b/public/css/detail.css
@@ -74,7 +74,8 @@
     line-height: 1.4em;
     margin-bottom: 30px;
 }
-.review-ttl {
+.review-ttl,
+.course-ttl {
     font-size: 24px;
     margin-bottom: 30px;
 }
@@ -89,7 +90,7 @@
     margin-bottom: 10px;
     width: 100%;
 }
-.comment{
+.comment {
     width: 60%;
     overflow-wrap: break-word;
 }
@@ -110,6 +111,7 @@
     display: flex;
     align-items: center;
     justify-content: flex-end;
+    margin-bottom: 20px;
 }
 .review-form__img {
     width: 15px;
@@ -121,19 +123,43 @@
     cursor: pointer;
 }
 .course {
-    padding: 5px 8px;
+    padding: 20px;
     background-color: #fff;
     border: none;
-    border-radius: 3px;
+    border-radius: 5px;
+    box-sizing: border-box;
     box-shadow: 2px 2px 3px 0 rgba(0, 0, 0, 0.5);
-    margin-right: 15px;
+    margin-bottom: 20px;
+}
+.course-content {
+    display: flex;
+    align-items: flex-end;
+    justify-content: space-between;
+}
+.course-name,
+.course-price {
+    margin-bottom: 20px;
 }
 .course-overview {
     line-height: 1.4em;
-    margin-bottom: 30px;
+    color: darkgray;
+    margin-bottom: 10px;
+    width: 100%;
+    overflow-wrap: break-word;
 }
 .course-img {
-    width: 400px;
+    width: 200px;
+    border-radius: 5px;
+}
+.button {
+    background-color: #305dff;
+    color: #fff;
+    padding: 5px 10px;
+    border-radius: 6px;
+    display: block;
+    font-size: 12px;
+    border: none;
+    cursor: pointer;
 }
 .reserve {
     position: relative;
@@ -201,11 +227,11 @@
     .content {
         display: block;
     }
-    .detail{
+    .detail {
         width: 80%;
         margin: 30px auto;
     }
-    .reserve{
+    .reserve {
         width: 80%;
         margin: 30px auto;
         height: 50vh;
