--- a/public/css/detail.css
+++ b/public/css/detail.css
@@ -142,7 +142,7 @@
 }
 .course-overview {
     line-height: 1.4em;
-    color: darkgray;
+    color: gray;
     margin-bottom: 10px;
     width: 100%;
     overflow-wrap: break-word;
